@@ -1,7 +1,8 @@
-// $Id: CHANGELOG.txt,v 1.14.2.7 2007/06/27 20:55:24 morbus Exp $
+// $Id: CHANGELOG.txt,v 1.14.2.8 2007/06/28 19:47:37 morbus Exp $
 
 Bot 5.x-1.0, 2007-??-??
 -----------------------
+ * bot: supports server passwords and channel keys, thanks to Bdragon.
  * bot_drupal: better handling of improper Doxygen summaries.
  * bot_drupal from Bdragon: integrate with api.module.
  * bot_factoid.module added; an infobot clone with all the fixins.
